save and go to next

--- a/templates/admin/change_form.html
+++ b/templates/admin/change_form.html
@@ -3,6 +3,6 @@
 {% block submit_buttons_bottom %}
     {{ block.super }}
     <div class="submit-row">
-            <input type="submit" value="Next Product" name="_next_item">
+            <input type="submit" value="Save and go to next product" name="_next_item">
     </div>
 {% endblock %}
