--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,4 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
     <h2>{{ product.title }}</h2>
+    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for image in product.product_images %}
+                <div class="carousel-item{% if forloop.first %} active{% endif %}">
+                    <img class="d-block w-100" src="{{ image }}" alt="Third slide">
+                </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselControls" role="button"
+           data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselControls" role="button"
+           data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 {% endblock %}
