--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,15 @@
         </div>
     </div>
 </div>
+<!-- Footer -->
+<footer class="font-small special-color-dark pt-4">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="{% url 'home' %}"> Milaner</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
