--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -54,18 +54,20 @@
                 <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
             {% endif %}
             {% for i in products.paginator.page_range %}
+                {% if i <= products.number|add:5 and i >= products.number|add:-5 %}
                 {% if products.number == i %}
                     <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span>
                     </li>
                 {% else %}
                     <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
                 {% endif %}
+                {%  endif %}
             {% endfor %}
             {% if products.has_next %}
                 <li class="page-item"><a href="?page={{ products.next_page_number }}" class="page-link">&raquo;</a>
                 </li>
             {% else %}
-                <li class="page-item disabled"><span>&raquo;</span></li>
+                <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
             {% endif %}
             </ul>
         </nav>
