--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,8 +20,8 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+{% include "header.html" %}
 <div class="container">
-
     <div class="row justify-content-center">
         <div class="col-12">
             {% include "logo.html" %}
