--- a/static/template.css
+++ b/static/template.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;1,300&display=swap');
+
 body {
     margin-top: 1rem;
     margin-left: 1rem;
+    font-family: 'Work Sans', sans-serif; !important;
 }
 
 ul {
