--- a/app/templates/product_list.html
+++ b/app/templates/product_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load custom_tags %}
 {% block content %}
     <h4 class="mt-2 mb-2">Search Products</h4>
     <!--Search By Parameter Container-->
@@ -111,7 +112,7 @@
             <ul class="pagination justify-content-center mt-4">
                 {% if products.has_previous %}
                     <li class="page-item">
-                        <a href="?page={{ products.previous_page_number }}" class="page-link">&laquo;</a>
+                        <a href="?{% param_replace page=products.previous_page_number %}" class="page-link">&laquo;</a>
                     </li>
                 {% else %}
                     <li class="page-item disabled"><span class="page-link">&laquo;</span>
@@ -125,14 +126,14 @@
                             </li>
                         {% else %}
                             <li class="page-item">
-                                <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                                <a href="?{% param_replace page=i %}"  class="page-link">{{ i }}</a>
                             </li>
                         {% endif %}
                     {% endif %}
                 {% endfor %}
                 {% if products.has_next %}
                     <li class="page-item">
-                        <a href="?page={{ products.next_page_number }}" class="page-link">&raquo;</a>
+                        <a href="?{% param_replace page=products.next_page_number %}" class="page-link">&raquo;</a>
                     </li>
                 {% else %}
                     <li class="page-item disabled"><span class="page-link">&raquo;</span>
